--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-discord.py==2.0.1
-yt-dlp==2024.11.04
-spotipy==2.21.0
-aiohttp==3.8.3
-Flask==2.2.2
-Werkzeug==2.2.3
+discord.py
+yt-dlp
+spotipy
+python-decouple
